APK install command, with internal apk scanning to take most decisions